// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSyncSwiftVisitor Many To Many V2 Tests Should generate the intermediate model successfully 1`] = `
"// swiftlint:disable all
import Amplify
import Foundation
"
`;

exports[`AppSyncSwiftVisitor Should generate a default vales for a Model with @default directives 1`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct SimpleModel: Model {
  public let id: String
  public var stringValue: String?
  public var intVal: Int?
  public var floatValue: Double?
  public var booleanValue: Bool?
  public var awsJsonValue: String?
  public var awsDateValue: Temporal.Date?
  public var awsTimestampValue: Int?
  public var awsEmailValue: String?
  public var awsURLValue: String?
  public var awsPhoneValue: String?
  public var awsIPAddressValue1: String?
  public var awsIPAddressValue2: String?
  public var enumValue: Tag?
  public var awsTimeValue: Temporal.Time?
  public var awsDateTime: Temporal.DateTime?
  public var createdAt: Temporal.DateTime?
  public var updatedAt: Temporal.DateTime?
  
  public init(id: String = UUID().uuidString,
      stringValue: String? = \\"hello world\\",
      intVal: Int? = 10002000,
      floatValue: Double? = 123456.34565,
      booleanValue: Bool? = true,
      awsJsonValue: String? = \\"{\\\\\\"a\\\\\\":1, \\\\\\"b\\\\\\":3, \\\\\\"string\\\\\\": 234}\\",
      awsDateValue: Temporal.Date? = try? Temporal.Date(iso8601String: \\"2016-01-29\\"),
      awsTimestampValue: Int? = 545345345,
      awsEmailValue: String? = \\"local-part@domain-part\\",
      awsURLValue: String? = \\"https://www.amazon.com/dp/B000NZW3KC/\\",
      awsPhoneValue: String? = \\"+41 44 668 18 00\\",
      awsIPAddressValue1: String? = \\"123.12.34.56\\",
      awsIPAddressValue2: String? = \\"1a2b:3c4b::1234:4567\\",
      enumValue: Tag? = Tag.random,
      awsTimeValue: Temporal.Time? = try? Temporal.Time(iso8601String: \\"12:00:34Z\\"),
      awsDateTime: Temporal.DateTime? = try? Temporal.DateTime(iso8601String: \\"2007-04-05T14:30:34Z\\")) {
    self.init(id: id,
      stringValue: stringValue,
      intVal: intVal,
      floatValue: floatValue,
      booleanValue: booleanValue,
      awsJsonValue: awsJsonValue,
      awsDateValue: awsDateValue,
      awsTimestampValue: awsTimestampValue,
      awsEmailValue: awsEmailValue,
      awsURLValue: awsURLValue,
      awsPhoneValue: awsPhoneValue,
      awsIPAddressValue1: awsIPAddressValue1,
      awsIPAddressValue2: awsIPAddressValue2,
      enumValue: enumValue,
      awsTimeValue: awsTimeValue,
      awsDateTime: awsDateTime,
      createdAt: nil,
      updatedAt: nil)
  }
  internal init(id: String = UUID().uuidString,
      stringValue: String? = \\"hello world\\",
      intVal: Int? = 10002000,
      floatValue: Double? = 123456.34565,
      booleanValue: Bool? = true,
      awsJsonValue: String? = \\"{\\\\\\"a\\\\\\":1, \\\\\\"b\\\\\\":3, \\\\\\"string\\\\\\": 234}\\",
      awsDateValue: Temporal.Date? = try? Temporal.Date(iso8601String: \\"2016-01-29\\"),
      awsTimestampValue: Int? = 545345345,
      awsEmailValue: String? = \\"local-part@domain-part\\",
      awsURLValue: String? = \\"https://www.amazon.com/dp/B000NZW3KC/\\",
      awsPhoneValue: String? = \\"+41 44 668 18 00\\",
      awsIPAddressValue1: String? = \\"123.12.34.56\\",
      awsIPAddressValue2: String? = \\"1a2b:3c4b::1234:4567\\",
      enumValue: Tag? = Tag.random,
      awsTimeValue: Temporal.Time? = try? Temporal.Time(iso8601String: \\"12:00:34Z\\"),
      awsDateTime: Temporal.DateTime? = try? Temporal.DateTime(iso8601String: \\"2007-04-05T14:30:34Z\\"),
      createdAt: Temporal.DateTime? = nil,
      updatedAt: Temporal.DateTime? = nil) {
      self.id = id
      self.stringValue = stringValue
      self.intVal = intVal
      self.floatValue = floatValue
      self.booleanValue = booleanValue
      self.awsJsonValue = awsJsonValue
      self.awsDateValue = awsDateValue
      self.awsTimestampValue = awsTimestampValue
      self.awsEmailValue = awsEmailValue
      self.awsURLValue = awsURLValue
      self.awsPhoneValue = awsPhoneValue
      self.awsIPAddressValue1 = awsIPAddressValue1
      self.awsIPAddressValue2 = awsIPAddressValue2
      self.enumValue = enumValue
      self.awsTimeValue = awsTimeValue
      self.awsDateTime = awsDateTime
      self.createdAt = createdAt
      self.updatedAt = updatedAt
  }
}"
`;

exports[`AppSyncSwiftVisitor Should generate a default values for a Model with @default directives 1`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct SimpleModel: Model {
  public let id: String
  public var stringValue: String?
  public var intVal: Int?
  public var floatValue: Double?
  public var booleanValue: Bool?
  public var awsJsonValue: String?
  public var awsDateValue: Temporal.Date?
  public var awsTimestampValue: Int?
  public var awsEmailValue: String?
  public var awsURLValue: String?
  public var awsPhoneValue: String?
  public var awsIPAddressValue1: String?
  public var awsIPAddressValue2: String?
  public var enumValue: Tag?
  public var awsTimeValue: Temporal.Time?
  public var awsDateTime: Temporal.DateTime?
  public var createdAt: Temporal.DateTime?
  public var updatedAt: Temporal.DateTime?
  
  public init(id: String = UUID().uuidString,
      stringValue: String? = \\"hello world\\",
      intVal: Int? = 10002000,
      floatValue: Double? = 123456.34565,
      booleanValue: Bool? = true,
      awsJsonValue: String? = \\"{\\\\\\"a\\\\\\":1, \\\\\\"b\\\\\\":3, \\\\\\"string\\\\\\": 234}\\",
      awsDateValue: Temporal.Date? = try? Temporal.Date(iso8601String: \\"2016-01-29\\"),
      awsTimestampValue: Int? = 545345345,
      awsEmailValue: String? = \\"local-part@domain-part\\",
      awsURLValue: String? = \\"https://www.amazon.com/dp/B000NZW3KC/\\",
      awsPhoneValue: String? = \\"+41 44 668 18 00\\",
      awsIPAddressValue1: String? = \\"123.12.34.56\\",
      awsIPAddressValue2: String? = \\"1a2b:3c4b::1234:4567\\",
      enumValue: Tag? = Tag.random,
      awsTimeValue: Temporal.Time? = try? Temporal.Time(iso8601String: \\"12:00:34Z\\"),
      awsDateTime: Temporal.DateTime? = try? Temporal.DateTime(iso8601String: \\"2007-04-05T14:30:34Z\\")) {
    self.init(id: id,
      stringValue: stringValue,
      intVal: intVal,
      floatValue: floatValue,
      booleanValue: booleanValue,
      awsJsonValue: awsJsonValue,
      awsDateValue: awsDateValue,
      awsTimestampValue: awsTimestampValue,
      awsEmailValue: awsEmailValue,
      awsURLValue: awsURLValue,
      awsPhoneValue: awsPhoneValue,
      awsIPAddressValue1: awsIPAddressValue1,
      awsIPAddressValue2: awsIPAddressValue2,
      enumValue: enumValue,
      awsTimeValue: awsTimeValue,
      awsDateTime: awsDateTime,
      createdAt: nil,
      updatedAt: nil)
  }
  internal init(id: String = UUID().uuidString,
      stringValue: String? = \\"hello world\\",
      intVal: Int? = 10002000,
      floatValue: Double? = 123456.34565,
      booleanValue: Bool? = true,
      awsJsonValue: String? = \\"{\\\\\\"a\\\\\\":1, \\\\\\"b\\\\\\":3, \\\\\\"string\\\\\\": 234}\\",
      awsDateValue: Temporal.Date? = try? Temporal.Date(iso8601String: \\"2016-01-29\\"),
      awsTimestampValue: Int? = 545345345,
      awsEmailValue: String? = \\"local-part@domain-part\\",
      awsURLValue: String? = \\"https://www.amazon.com/dp/B000NZW3KC/\\",
      awsPhoneValue: String? = \\"+41 44 668 18 00\\",
      awsIPAddressValue1: String? = \\"123.12.34.56\\",
      awsIPAddressValue2: String? = \\"1a2b:3c4b::1234:4567\\",
      enumValue: Tag? = Tag.random,
      awsTimeValue: Temporal.Time? = try? Temporal.Time(iso8601String: \\"12:00:34Z\\"),
      awsDateTime: Temporal.DateTime? = try? Temporal.DateTime(iso8601String: \\"2007-04-05T14:30:34Z\\"),
      createdAt: Temporal.DateTime? = nil,
      updatedAt: Temporal.DateTime? = nil) {
      self.id = id
      self.stringValue = stringValue
      self.intVal = intVal
      self.floatValue = floatValue
      self.booleanValue = booleanValue
      self.awsJsonValue = awsJsonValue
      self.awsDateValue = awsDateValue
      self.awsTimestampValue = awsTimestampValue
      self.awsEmailValue = awsEmailValue
      self.awsURLValue = awsURLValue
      self.awsPhoneValue = awsPhoneValue
      self.awsIPAddressValue1 = awsIPAddressValue1
      self.awsIPAddressValue2 = awsIPAddressValue2
      self.enumValue = enumValue
      self.awsTimeValue = awsTimeValue
      self.awsDateTime = awsDateTime
      self.createdAt = createdAt
      self.updatedAt = updatedAt
  }
}"
`;

exports[`AppSyncSwiftVisitor Should handle nullability of lists appropriately 1`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct ListContainer: Model {
  public let id: String
  public var name: String?
  public var list: [Int?]?
  public var requiredList: [String?]
  public var requiredListOfRequired: [StatusEnum]
  public var listOfRequired: [Bool]?
  public var requiredListOfRequiredDates: [Temporal.Date]
  public var listOfRequiredFloats: [Double]?
  public var requiredListOfCustomTypes: [CustomType?]
  public var createdAt: Temporal.DateTime?
  public var updatedAt: Temporal.DateTime?
  
  public init(id: String = UUID().uuidString,
      name: String? = nil,
      list: [Int?]? = nil,
      requiredList: [String?] = [],
      requiredListOfRequired: [StatusEnum] = [],
      listOfRequired: [Bool]? = nil,
      requiredListOfRequiredDates: [Temporal.Date] = [],
      listOfRequiredFloats: [Double]? = nil,
      requiredListOfCustomTypes: [CustomType?] = []) {
    self.init(id: id,
      name: name,
      list: list,
      requiredList: requiredList,
      requiredListOfRequired: requiredListOfRequired,
      listOfRequired: listOfRequired,
      requiredListOfRequiredDates: requiredListOfRequiredDates,
      listOfRequiredFloats: listOfRequiredFloats,
      requiredListOfCustomTypes: requiredListOfCustomTypes,
      createdAt: nil,
      updatedAt: nil)
  }
  internal init(id: String = UUID().uuidString,
      name: String? = nil,
      list: [Int?]? = nil,
      requiredList: [String?] = [],
      requiredListOfRequired: [StatusEnum] = [],
      listOfRequired: [Bool]? = nil,
      requiredListOfRequiredDates: [Temporal.Date] = [],
      listOfRequiredFloats: [Double]? = nil,
      requiredListOfCustomTypes: [CustomType?] = [],
      createdAt: Temporal.DateTime? = nil,
      updatedAt: Temporal.DateTime? = nil) {
      self.id = id
      self.name = name
      self.list = list
      self.requiredList = requiredList
      self.requiredListOfRequired = requiredListOfRequired
      self.listOfRequired = listOfRequired
      self.requiredListOfRequiredDates = requiredListOfRequiredDates
      self.listOfRequiredFloats = listOfRequiredFloats
      self.requiredListOfCustomTypes = requiredListOfCustomTypes
      self.createdAt = createdAt
      self.updatedAt = updatedAt
  }
}"
`;

exports[`AppSyncSwiftVisitor Should handle nullability of lists appropriately 2`] = `
"// swiftlint:disable all
import Amplify
import Foundation

extension ListContainer {
  // MARK: - CodingKeys 
   public enum CodingKeys: String, ModelKey {
    case id
    case name
    case list
    case requiredList
    case requiredListOfRequired
    case listOfRequired
    case requiredListOfRequiredDates
    case listOfRequiredFloats
    case requiredListOfCustomTypes
    case createdAt
    case updatedAt
  }
  
  public static let keys = CodingKeys.self
  //  MARK: - ModelSchema 
  
  public static let schema = defineSchema { model in
    let listContainer = ListContainer.keys
    
    model.pluralName = \\"ListContainers\\"
    
    model.fields(
      .id(),
      .field(listContainer.name, is: .optional, ofType: .string),
      .field(listContainer.list, is: .optional, ofType: .embeddedCollection(of: Int.self)),
      .field(listContainer.requiredList, is: .required, ofType: .embeddedCollection(of: String.self)),
      .field(listContainer.requiredListOfRequired, is: .required, ofType: .embeddedCollection(of: StatusEnum.self)),
      .field(listContainer.listOfRequired, is: .optional, ofType: .embeddedCollection(of: Bool.self)),
      .field(listContainer.requiredListOfRequiredDates, is: .required, ofType: .embeddedCollection(of: Temporal.Date.self)),
      .field(listContainer.listOfRequiredFloats, is: .optional, ofType: .embeddedCollection(of: Double.self)),
      .field(listContainer.requiredListOfCustomTypes, is: .required, ofType: .embeddedCollection(of: CustomType.self)),
      .field(listContainer.createdAt, is: .optional, isReadOnly: true, ofType: .dateTime),
      .field(listContainer.updatedAt, is: .optional, isReadOnly: true, ofType: .dateTime)
    )
    }
}"
`;

exports[`AppSyncSwiftVisitor Should handle nullability of lists appropriately 3`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct CustomType: Embeddable {
  var name: String?
  var list: [Int?]?
  var requiredList: [String?]
  var requiredListOfRequired: [StatusEnum]
  var listOfRequired: [Bool]?
}"
`;

exports[`AppSyncSwiftVisitor Should render lists with HAS_MANY connection as optional fields 1`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct Todo: Model {
  public let id: String
  public var title: String
  public var requiredListOfTasks: List<task>?
  public var listOfRequiredTasks: List<task>?
  public var listOfTasks: List<task>?
  public var requiredListOfRequiredTasks: List<task>?
  public var createdAt: Temporal.DateTime?
  public var updatedAt: Temporal.DateTime?
  
  public init(id: String = UUID().uuidString,
      title: String,
      requiredListOfTasks: List<task>? = [],
      listOfRequiredTasks: List<task> = [],
      listOfTasks: List<task>? = [],
      requiredListOfRequiredTasks: List<task> = []) {
    self.init(id: id,
      title: title,
      requiredListOfTasks: requiredListOfTasks,
      listOfRequiredTasks: listOfRequiredTasks,
      listOfTasks: listOfTasks,
      requiredListOfRequiredTasks: requiredListOfRequiredTasks,
      createdAt: nil,
      updatedAt: nil)
  }
  internal init(id: String = UUID().uuidString,
      title: String,
      requiredListOfTasks: List<task>? = [],
      listOfRequiredTasks: List<task> = [],
      listOfTasks: List<task>? = [],
      requiredListOfRequiredTasks: List<task> = [],
      createdAt: Temporal.DateTime? = nil,
      updatedAt: Temporal.DateTime? = nil) {
      self.id = id
      self.title = title
      self.requiredListOfTasks = requiredListOfTasks
      self.listOfRequiredTasks = listOfRequiredTasks
      self.listOfTasks = listOfTasks
      self.requiredListOfRequiredTasks = requiredListOfRequiredTasks
      self.createdAt = createdAt
      self.updatedAt = updatedAt
  }
}"
`;

exports[`AppSyncSwiftVisitor Should render lists with HAS_MANY connection as optional fields 2`] = `
"// swiftlint:disable all
import Amplify
import Foundation

extension Todo {
  // MARK: - CodingKeys 
   public enum CodingKeys: String, ModelKey {
    case id
    case title
    case requiredListOfTasks
    case listOfRequiredTasks
    case listOfTasks
    case requiredListOfRequiredTasks
    case createdAt
    case updatedAt
  }
  
  public static let keys = CodingKeys.self
  //  MARK: - ModelSchema 
  
  public static let schema = defineSchema { model in
    let todo = Todo.keys
    
    model.pluralName = \\"Todos\\"
    
    model.fields(
      .id(),
      .field(todo.title, is: .required, ofType: .string),
      .hasMany(todo.requiredListOfTasks, is: .optional, ofType: task.self, associatedWith: task.keys.todo),
      .hasMany(todo.listOfRequiredTasks, is: .optional, ofType: task.self, associatedWith: task.keys.todo),
      .hasMany(todo.listOfTasks, is: .optional, ofType: task.self, associatedWith: task.keys.todo),
      .hasMany(todo.requiredListOfRequiredTasks, is: .optional, ofType: task.self, associatedWith: task.keys.todo),
      .field(todo.createdAt, is: .optional, isReadOnly: true, ofType: .dateTime),
      .field(todo.updatedAt, is: .optional, isReadOnly: true, ofType: .dateTime)
    )
    }
}"
`;

exports[`AppSyncSwiftVisitor Should render lists with HAS_MANY connection as optional fields 3`] = `
"// swiftlint:disable all
import Amplify
import Foundation

public struct task: Model {
  public let id: String
  public var title: String
  public var todo: Todo?
  public var createdAt: Temporal.DateTime?
  public var updatedAt: Temporal.DateTime?
  
  public init(id: String = UUID().uuidString,
      title: String,
      todo: Todo? = nil) {
    self.init(id: id,
      title: title,
      todo: todo,
      createdAt: nil,
      updatedAt: nil)
  }
  internal init(id: String = UUID().uuidString,
      title: String,
      todo: Todo? = nil,
      createdAt: Temporal.DateTime? = nil,
      updatedAt: Temporal.DateTime? = nil) {
      self.id = id
      self.title = title
      self.todo = todo
      self.createdAt = createdAt
      self.updatedAt = updatedAt
  }
}"
`;

exports[`AppSyncSwiftVisitor Should render lists with HAS_MANY connection as optional fields 4`] = `
"// swiftlint:disable all
import Amplify
import Foundation

extension task {
  // MARK: - CodingKeys 
   public enum CodingKeys: String, ModelKey {
    case id
    case title
    case todo
    case createdAt
    case updatedAt
  }
  
  public static let keys = CodingKeys.self
  //  MARK: - ModelSchema 
  
  public static let schema = defineSchema { model in
    let task = task.keys
    
    model.pluralName = \\"tasks\\"
    
    model.fields(
      .id(),
      .field(task.title, is: .required, ofType: .string),
      .belongsTo(task.todo, is: .optional, ofType: Todo.self, targetName: \\"taskTodoId\\"),
      .field(task.createdAt, is: .optional, isReadOnly: true, ofType: .dateTime),
      .field(task.updatedAt, is: .optional, isReadOnly: true, ofType: .dateTime)
    )
    }
}"
`;
